# ai-agents-assetplan

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
llm/: rag_agent.py
scraper/: scrape.py
tests/: test_api.py  test_rag.py  test_scraper.py
ui/: app.py
vectorStorage/: chromadb.py
